--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.level.org.springframework=INFO
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/mgmt
 spring.datasource.username=root
 spring.datasource.password=vijay@637943
